Add a small paragraph about the authors

--- a/README
+++ b/README
@@ -1,5 +1,13 @@
 New fresh repository.
 
+
+--------------------------------------------------------------------
+                        Authors
+--------------------------------------------------------------------
+
+This is a project created by a group of student from the computer
+science Master 2 STL speciality
+
 --------------------------------------------------------------------
                         History:
 --------------------------------------------------------------------
