--- a/README
+++ b/README
@@ -4,6 +4,7 @@ F-Safe is a model checking langage prototype, based on Foetus.
 
 Its main goal is to provide a termination checking for every program written in F-Safe
 
+This a student project from Paris 6 university
 
 --------------------------------------------------------------------
                         Authors
