Precision on Authors

--- a/README
+++ b/README
@@ -13,6 +13,8 @@ This a student project from Paris 6 university
 This is a project created by a group of student from the computer
 science Master 2 STL speciality
 
+The project leader was G. B.
+Technical Leader were T. P. and A. D.
 --------------------------------------------------------------------
                         History:
 --------------------------------------------------------------------
